[package]
name = "embedded-eventloop"
version = "0.1.0"
edition = "2021"
authors = ["KizzyCode Software Labs./Keziah Biermann <development@kizzycode.de>"]
keywords = []
categories = []
description = "An eventloop for embedded devices"
license = "BSD-2-Clause OR MIT"
repository = "https://github.com/KizzyCode/embedded-eventloop-rust"
readme = "README.md"


[badges]


[features]
default = []


[dependencies]


[profile.release]
overflow-checks = true

[profile.bench]
overflow-checks = true
