[package]
name = "eventloop-rp2040"
version = "0.1.0"
edition = "2021"
authors = ["KizzyCode Software Labs./Keziah Biermann <development@kizzycode.de>"]
keywords = []
categories = []
description = "An eventloop for embedded devices, with predefined runtime functions for the rp2040"
license = "BSD-2-Clause OR MIT"
repository = "https://github.com/KizzyCode/eventloop-rust"
readme = "README.md"


[badges]


[features]
default = []


[dependencies]
eventloop = { git = "https://github.com/KizzyCode/eventloop-rust.git" }
critical-section = "1.0.0"
cortex-m = "0.7.7"


[profile.release]
overflow-checks = true

[profile.bench]
overflow-checks = true
